<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/btn_showFullSpectrum"
        android:enabled="true"
        android:icon="@drawable/show_full_spectrum"
        android:title="@string/str_showFullSpectrum"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/btn_frequentUnits"
        android:title="@string/str_selectFrequentUnits"
        app:showAsAction="never" />
    <item
        android:id="@+id/btn_defineVelocity"
        android:title="@string/str_defineVelocity"
        app:showAsAction="never" />
</menu>