<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top|center"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_velocityInstructions"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/txt_base"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.2"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/txt_exp"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-1dp"
                android:layout_marginLeft="-118dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="numberSigned"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/txt_x10"
                app:layout_constraintLeft_toRightOf="@+id/txt_x10"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="8dp"
                android:text="@string/x10"
                app:layout_constraintBottom_toBottomOf="@+id/txt_base"
                app:layout_constraintLeft_toRightOf="@+id/txt_base" />

            <Spinner
                android:id="@+id/spinner_units"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/txt_exp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/txt_x10"
                android:layout_marginBottom="8dp" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_speedOfLight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/str_speedOfLight"
        android:drawableLeft="@mipmap/ic_speed_of_light"
        android:text="@string/str_speedOfLight" />

    <Button
        android:id="@+id/btn_saveSpeed"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/str_save" />
</LinearLayout>
